--- a/FicaFrio/Base.lproj/Main.storyboard
+++ b/FicaFrio/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Rao-Rf-tPL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="O4b-DK-hPY">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -200,13 +200,12 @@
                                     <segue destination="whk-Og-WXW" kind="push" id="VGn-O3-wNa"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jq3-5O-Xkz">
-                                <rect key="frame" x="154" y="447" width="68" height="30"/>
-                                <state key="normal" title="Feedback"/>
+                            <containerView hidden="YES" opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="upB-Vu-sIy">
+                                <rect key="frame" x="30" y="95" width="315" height="493"/>
                                 <connections>
-                                    <segue destination="IH0-gW-iFA" kind="show" id="kan-8F-qKA"/>
+                                    <segue destination="VYy-DB-ktu" kind="embed" id="c11-6I-2f5"/>
                                 </connections>
-                            </button>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -214,10 +213,12 @@
                     <connections>
                         <outlet property="circleNumber" destination="0CZ-EU-7UQ" id="ph0-fk-l5S"/>
                         <outlet property="circleView" destination="5ov-Kr-YOu" id="4lu-Vh-5sS"/>
+                        <outlet property="containerPopup" destination="upB-Vu-sIy" id="Qzi-PN-zhK"/>
                         <outlet property="labelStep" destination="ycL-cC-Oy8" id="c5O-jK-48M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QhY-xQ-jHi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="JfA-Hg-P1X"/>
             </objects>
             <point key="canvasLocation" x="1213.5" y="1460.5"/>
         </scene>
@@ -336,6 +337,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qye-gE-BFv"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="bpm" destination="1G3-IF-n1Y" id="FhJ-9x-Iof"/>
@@ -358,7 +360,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1709.5" y="1460.5"/>
+            <point key="canvasLocation" x="2249.5" y="1502.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PbC-fa-Z4f">
@@ -377,11 +379,75 @@
             </objects>
             <point key="canvasLocation" x="-308.5" y="652.5"/>
         </scene>
+        <!--Current Step View Controller-->
+        <scene sceneID="lnp-Rm-8oe">
+            <objects>
+                <viewController id="VYy-DB-ktu" customClass="CurrentStepViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7HN-Pw-RT9">
+                        <rect key="frame" x="0.0" y="0.0" width="315" height="493"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" alpha="0.89999997615814209" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fimDeMeta" translatesAutoresizingMaskIntoConstraints="NO" id="ahx-lC-Xf1">
+                                <rect key="frame" x="4" y="-24" width="306" height="546"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IaI-Am-8nz">
+                                <rect key="frame" x="110" y="193" width="93" height="92"/>
+                                <state key="normal" title="Infografo" image="popupIcon2"/>
+                                <connections>
+                                    <segue destination="IH0-gW-iFA" kind="show" id="MdE-u0-Fhd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hA-mw-Vhw">
+                                <rect key="frame" x="120" y="28" width="72" height="89"/>
+                                <state key="normal" title="Back" image="popupIcon3"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KvY-Km-y9K">
+                                <rect key="frame" x="104" y="361" width="105" height="74"/>
+                                <state key="normal" title="Geral" image="popupIcon1"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Avaliação da Tarefa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unE-3l-n0x">
+                                <rect key="frame" x="47" y="303" width="221" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Avaliação Geral" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nbp-MG-oHf">
+                                <rect key="frame" x="47" y="448" width="221" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nova Meta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZY-mT-jQe">
+                                <rect key="frame" x="46" y="132" width="221" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </view>
+                    <connections>
+                        <outlet property="backButton" destination="0hA-mw-Vhw" id="Cri-Bs-ihV"/>
+                        <outlet property="backLabel" destination="OZY-mT-jQe" id="1PW-q7-lBY"/>
+                        <outlet property="backgroundPopup" destination="ahx-lC-Xf1" id="TLS-IN-c5E"/>
+                        <outlet property="grafButton" destination="KvY-Km-y9K" id="wob-IN-tUv"/>
+                        <outlet property="grafLabel" destination="Nbp-MG-oHf" id="HQV-Nd-3mR"/>
+                        <outlet property="infoButton" destination="IaI-Am-8nz" id="gyg-Bp-XFc"/>
+                        <outlet property="infoLabel" destination="unE-3l-n0x" id="0Nd-VE-oQ6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vVy-ST-hJn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1702.5" y="1461"/>
+        </scene>
     </scenes>
     <resources>
         <image name="circuloPassos" width="543" height="543"/>
         <image name="coracao_2" width="200" height="175"/>
         <image name="coracao_3" width="200" height="175"/>
+        <image name="fimDeMeta" width="800" height="1261"/>
+        <image name="popupIcon1" width="250" height="193"/>
+        <image name="popupIcon2" width="250" height="250"/>
+        <image name="popupIcon3" width="250" height="323"/>
         <image name="relogio_2" width="200" height="175"/>
         <image name="roda_01_2" width="454" height="182"/>
         <image name="roda_02_2" width="258" height="391"/>
